--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -30,6 +30,13 @@ body {
     white-space: nowrap;
 }
 
+.caption p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
 .thumbnail img {
     width: 100%;
 }
